--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-helloworld....
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <header class="navbar navbar-static-top" style="background:#787878">
+            <div class="navbar-header">
+                <a href="" class="navbar-brand">
+                    <img src="images/image1.png" style="height: 30px">
+                </a>
+                <div class="pull-right" style="padding:10px 10px">
+                    Georgekutty
+                </div>
+            </div>
+    </header>
+    <div class="container-fluid">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" id="fileListContainer">
+
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+   
+</body>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function () {
+
+    });
+</script>
+
+</html>
