--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -8,25 +8,42 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <header class="navbar navbar-static-top" style="background:#787878">
-            <div class="navbar-header">
-                <a href="" class="navbar-brand">
-                    <img src="images/image1.png" style="height: 30px">
-                </a>
-                <div class="pull-right" style="padding:10px 10px">
-                    Georgekutty
-                </div>
-            </div>
+<body style="background-image:url(images/background4.jpg);background-attachment: fixed;background-size: contain;background-repeat: no-repeat;">
+    <div style="position:fixed;width:100px;height:400px;right: 0px;z-index: 1000000;">
+        <div style="text-align: center;    padding-top: 40px;">
+            <img src="images/gitHubIcon1.png" style="height:50px">
+        </div>
+        <div style="text-align: center;    padding-top: 40px;">
+            <img src="images/freelancerIcon1.png" style="height:50px">
+        </div>
+        <div style="text-align: center;    padding-top: 40px;">
+            <img src="images/npmIcon1.png" style="height:50px">
+        </div> 
+        <div style="text-align: center;    padding-top: 40px;">
+            <img src="images/linkedInIcon1.png" style="height:50px">
+        </div>
+    </div>
+    <header class="navbar navbar-static-top" style="background:#383838;margin-bottom: 0px;">
+        <div class="navbar-header">
+            <a href="" class="navbar-brand">
+                <img src="images/image1.png" style="height: 30px">
+            </a>
+        </div>
     </header>
     <div class="container-fluid">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" id="fileListContainer">
+        <div class="row" style="text-align: center;background-color:#000000c7;padding: 100px;">
+            <img src="images/gkImage.jpg" class="img-circle" alt="Cinque Terre" style="height:200px">
+            <div style="color:#fff;padding:10px">Georgekutty</div>
+        </div>
+        <div class="row" style="background-color:#787878">
+            <div class="col-md-4" style="height:800px;box-shadow: inset 0px 0px 8px #000;"></div>
+            <div class="col-md-8" style="height:800px;box-shadow: inset 0px 0px 0px #000;"></div>
+        </div>
+        <div class="row" style="height:100px;background-color:rgb(141, 90, 90)">
 
         </div>
-        <div class="col-md-2"></div>
     </div>
-   
+
 </body>
 
 <script src="js/jquery.min.js"></script>
@@ -37,4 +54,25 @@
     });
 </script>
 
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico?v=2" />
+    <title>React Login Page</title>
+</head>
+
+<body>
+    <div id="root-container">
+        <div id="bundleLoader" style="display: flex;justify-content: center;align-items: center;padding-top: 50px;color:#000">
+            Bundle is Loading...
+        </div>
+        <div>
+        <script src="js/vendors.sharedChunk.js" type="text/javascript"></script>
+        <script src="js/loginPage.entryChunk.js" type="text/javascript"></script>
+</body>
 </html>
