--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <div id="bundleLoader" style="display: flex;justify-content: center;align-items: center;padding-top: 50px;color:#000">
             Bundle is Loading...
         </div>
-        <script src="react/loginPage.entryChunk.js"></script>
+        <script src="dist/loginPage.entryChunk.js"></script>
 </body>
 </html>
