--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="root-container">
         <div id="bundleLoader" style="display: flex;justify-content: center;align-items: center;padding-top: 50px;color:#000">
-            Bundle is Loading...
+            React bundle is Loading...
         </div>
         <script src="dist/loginPage.entryChunk.js"></script>
 </body>
